experimental/ir/testdata/options/validate/packed_2023.proto.stderr.txt
error: expected repeated field, found singular field
  --> testdata/options/validate/packed_2023.proto:8:5
   |
 8 |     int32 o1 = 1 [features.repeated_field_encoding = PACKED];
   |     ^^^^^         -------------------------------- packed encoding set here
   |
   = help: packed encoding can only be set on repeated fields of integer, float,
           `bool`, or enum type

error: expected repeated field, found singular field
  --> testdata/options/validate/packed_2023.proto:9:5
   |
 9 |     int32 o2 = 2 [features.repeated_field_encoding = EXPANDED];
   |     ^^^^^         -------------------------------- packed encoding set here
   |
   = help: packed encoding can only be set on repeated fields of integer, float,
           `bool`, or enum type

error: expected packable type, found message type `buf.test.M`
  --> testdata/options/validate/packed_2023.proto:11:14
   |
11 |     repeated M m1 = 3 [features.repeated_field_encoding = PACKED];
   |              ^         --------------------------------
   |                         |
   |                         packed encoding set here
   |
   = help: packed encoding can only be set on repeated fields of integer, float,
           `bool`, or enum type

error: `packed` is not supported in Edition 2023
  --> testdata/options/validate/packed_2023.proto:20:28
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
20 |     repeated float f3 = 9 [packed = true];
   |                            ^^^^^^
  help: replace with `repeated_field_encoding`
   |
20 | -     repeated float f3 = 9 [packed = true];
20 | +     repeated float f3 = 9 [repeated_field_encoding = PACKED];
   |
   = help: removed in Edition 2023

error: `packed` is not supported in Edition 2023
  --> testdata/options/validate/packed_2023.proto:21:29
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
20 |     repeated float f3 = 9 [packed = true];
21 |     repeated float f4 = 10 [packed = false];
   |                             ^^^^^^
  help: replace with `repeated_field_encoding`
   |
21 | -     repeated float f4 = 10 [packed = false];
21 | +     repeated float f4 = 10 [repeated_field_encoding = EXPANDED];
   |
   = help: removed in Edition 2023

error: expected packable type, found scalar type `string`
  --> testdata/options/validate/packed_2023.proto:23:14
   |
23 |     repeated string s1 = 11 [features.repeated_field_encoding = PACKED];
   |              ^^^^^^          --------------------------------
   |                               |
   |                               packed encoding set here
   |
   = help: packed encoding can only be set on repeated fields of integer, float,
           `bool`, or enum type

encountered 6 errors
